--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preload" href="fonts/inter-v7-latin_cyrillic-700.woff2" as="font" type="font/woff2" crossorigin>
 
   <link rel="stylesheet" href="css/index.css">
-  <script defer src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
   <title>CRM</title>
 </head>
 
